--- a/lab1/index.html
+++ b/lab1/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <!--Navbar first-->
-    <!--NOT DONE!!!-->
+    <!--Collapsible navbar-->
+    <!--A collapsible navbar is toggleable in mobile view and as the screen size increases the navigation becomes horizontal-->
     <nav class="navbar navbar-default"> 
         <div class="container-fluid"><!--container-fluid expands to fill the available width-->
             <div class="navbar-header"><!--holds the content that will be visible when the navbar becomes collapsible-->                
